# yolov8-oracle-detect

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  inference.h  predict.cpp  pt-to-onnx.sh
cls/: CMakeLists.txt  predict.cpp  pt-to-onnx.sh
cls/.cache/clangd/index/: predict-cls.cpp.370C975E4F9FFCB4.idx
cls/classify/oracle-cls35/: args.yaml  events.out.tfevents.1711819992.autodl-container-0c614e8f50-68fcd7bb.52537.0  results.csv
cls_cpp/: output.txt  predict-cls.cpp  pt-to-onnx.sh
cls_det/: CMakeLists.txt  inference.cpp  main.cpp  output_cls.txt
cls_det/.cache/clangd/index/: inference.h.49E520FF2BF97E3D.idx  main.cpp.DF3A2CD6CABEB0F9.idx  predict_det.h.50C271A852D8C61D.idx
cls_det/include/: predict_cls.h  predict_det.h
cls_det_cpp/: class_cls.txt  inference.cpp
det/: predict.cpp  pt-to-onnx.sh
det_cpp/: CMakeLists.txt  inference.cpp  predict.cpp
det_cpp/train/: args.yaml  results.csv
python/: .gitignore  output_cls.txt  output_det.txt  requirements.txt
python/.history/: .gitignore_20240417115001  fastapi_test_20240415230701.py  fastapi_test_20240415230702.py  fastapi_test_20240416123306.py  fastapi_test_20240416123735.py  fastapi_test_20240416123739.py  fastapi_test_20240416123749.py  fastapi_test_20240416123750.py  fastapi_test_20240416123834.py  fastapi_test_20240416123838.py  fastapi_test_20240416123839.py  fastapi_test_20240416123900.py  fastapi_test_20240416124105.py  fastapi_test_20240416125158.py  fastapi_test_20240416125236.py  (+46 more)
train/: events.out.tfevents.1711525766.autodl-container-744e4495ab-c8fe0397.3596.0
(+4334 files in other folders)
